fix overflow of custom elements in example

--- a/src/packages/excalidraw/example/App.scss
+++ b/src/packages/excalidraw/example/App.scss
@@ -33,6 +33,7 @@
   height: 800px;
   margin: 50px;
   position: relative;
+  overflow: hidden;
 }
 
 :root[dir="ltr"]
